# aftomap

godot/: export_presets.cfg  icon.svg.import  project.godot
godot/scenes/: app.tscn  control.tscn  macro_creator.tscn
godot/scripts/: MacroButton.gd  NewMacro.gd  Panel.gd  VBoxContainer.gd  test.gd
rust/: Cargo.toml
rust/src/: lib.rs
